--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             padding: 0;
             box-sizing: border-box;
             font-family: Arial, sans-serif;
+            text-align: center;
          }
         body {
             font-family: Arial, sans-serif;
@@ -147,6 +148,7 @@
         <a href="contact.html">Contact Us</a>
     </div>
     <div class="content">
+        <img src="icon.jpg.png" alt "kenyanut">
         <h2>Welcome back to Kenya Nut</h2>
         <div class="card">
             <h3>Notifications</h3>
